--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
-    <link rel = "stylesheet" type = "text/css" href = "script/style.css" />
+    <link rel="stylesheet" type="text/css" href="script/style.css" />
   </head>
   <body>
     <!--[if lt IE 8]>
@@ -18,6 +18,6 @@
     <![endif]-->
     <div id="app">Loading Dev App...</div>
     <!-- this is our local dev app -->
-    <script src="script/index.umd.js"></script>
+    <script src="script/index.iife.js"></script>
   </body>
 </html>
